--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "requestTest.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
     "request": "^2.87.0"
   },
